# ria-advisor-copilot

./: .gitignore  ARIA_USP_WF.md  Advisor Workspace - High Fidelity.html  Client Record - High Fidelity Mockup.html  DESIGN.md  HANDOFF.md  HELP.md  INTERACTION_LOG.md  NEXT_SESSION_CONTEXT.md  NOTES.md  PRD.md  README.md  SESSION_LOG.md  TEST.md  TEST_LOG.md  UI_UX_review.md  aria-advisor-preview.html  aria-next-chat-context-2026-04-03.md  aria-parity-matrix.md  aria-personal-preview-v2.html  aria-personal-preview.html  client-page-high-fidelity.html  emotion-blob-playground.html  preview-changes.html  render.yaml  ria_start_trigger.md  ria_wrap_trigger  riastart  session-log-gen.py
.github/: dependabot.yml
.github/workflows/: audit.yml
asset-sdk/: pyproject.toml
asset-sdk/aria_asset_sdk/: exceptions.py  models.py
asset-sdk/aria_asset_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
asset-sdk/tests/: test_mock_provider.py
backend/: .env.example  CLAUDE.md  requirements.txt
backend/app/: auth.py  database.py  main.py  models.py  personal_models.py  schemas.py  seed.py  seed_holdings.py  simulation.py  urgency.py
docs/: KYC_PHASE1_TEST_REPORT.md
documentation/: ARIA_Efficiency_Whitepaper.docx  ARIA_Technical_Design_Document.docx  generate_aria_efficiency_docx.py  generate_design_doc.js
e2e-tests/: CLAUDE.md  package-lock.json  playwright.config.ts
e2e-tests/playwright-report/: index.html
frontend/: .env.example  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
memory/: feedback_vercel_deploy_dir.md
(+64 files in other folders)
